Finish synthesis refinement; add flags

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 /Manifest.toml
-/examples/synthesis-example
-/examples/verification-example
-/examples/verification-example-single
+/examples/synthesis-example*
+/examples/verification-example*
 *.bson
