--- a/Project.toml
+++ b/Project.toml
@@ -26,6 +26,7 @@ Spot = "f11abc24-ce50-11e8-2475-af6658d13f2b"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
+Spot = "0.2"
 julia = "1"
 
 [extras]
